changed docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   common-validator: &common-validator
-    image: ghcr.io/synapsec-ai/llm-defender-validator:latest
+    build:
+      context: .
+      dockerfile: validator.Dockerfile
     restart: unless-stopped
     pull_policy: always
     user: llm-defender-validator-user
