--- a/.github/workflows/subnet-containers-latest.yml
+++ b/.github/workflows/subnet-containers-latest.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build-api-container-latest:
+    if: ${{ github.event.pull_request != null }}
     runs-on:
       group: synapsec-larger-runners
     permissions:
@@ -38,6 +39,7 @@ jobs:
         run: echo "{name}={image::ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest}" >> $GITHUB_OUTPUT
 
   build-validator-container-latest:
+    if: ${{ github.event.pull_request != null }}
     runs-on:
       group: synapsec-larger-runners
     permissions:
