--- a/.github/workflows/subnet-containers-latest.yml
+++ b/.github/workflows/subnet-containers-latest.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build-api-container-latest:
-    if: ${{ github.event.pull_request != null }}
     runs-on:
       group: synapsec-larger-runners
     permissions:
@@ -39,7 +38,6 @@ jobs:
         run: echo "{name}={image::ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest}" >> $GITHUB_OUTPUT
 
   build-validator-container-latest:
-    if: ${{ github.event.pull_request != null }}
     runs-on:
       group: synapsec-larger-runners
     permissions:
@@ -59,7 +57,7 @@ jobs:
           sudo apt-get install -y podman
 
       - name: Build Podman image
-        run: podman build -t ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest -f Dockerfile_API
+        run: podman build -t ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest -f validator.Dockerfile
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.repository_owner }} --password-stdin
