--- a/.github/workflows/subnet-containers-tagged.yml
+++ b/.github/workflows/subnet-containers-tagged.yml
@@ -69,7 +69,7 @@ jobs:
           echo "tag=${TAG}" >> $GITHUB_ENV
 
       - name: Build Podman image
-        run: podman build -t ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.tag }} -f Dockerfile_API
+        run: podman build -t ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.tag }} -f validator.Dockerfile
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.repository_owner }} --password-stdin
