update min_compute and workflow

--- a/.github/workflows/subnet-containers-latest.yml
+++ b/.github/workflows/subnet-containers-latest.yml
@@ -3,7 +3,7 @@ name: Push Docker image to latest
 on:
   push:
     branches:
-      - 'release/**'
+      - 'main'
 
 jobs:
   build-api-container-latest:
