update model references

--- a/.env.sample
+++ b/.env.sample
@@ -9,8 +9,7 @@ LOG_LEVEL=INFO
 VLLM_BASE_URL=
 VLLM_API_KEY=
 TENSOR_PARALLEL_SIZE=4
-VLLM_MODEL_NAME=TheBloke/Mixtral-8x7B-Instruct-v0.1-GPTQ
-VLLM_MODEL_REVISION=gptq-8bit-128g-actorder_True
+VLLM_MODEL_NAME=synapsecai/mixtral-8x7b-instruct-llm-defender-GPTQ-v0.1
 
 # Parameters required for only for the API
 TOP_AXONS_ONLY=TRUE
