--- a/.env.sample
+++ b/.env.sample
@@ -1,28 +1,21 @@
-# Docker variables
-NETUID=
-SUBTENSOR_NETWORK=
-WALLET_PATH=
+# Parameters required for both subnet validator and API
+NETUID=14
+SUBTENSOR_CHAIN_ENDPOINT=wss://entrypoint-finney.opentensor.ai:443
+VALIDATOR_WALLET=mainnet_validator
+VALIDATOR_HOTKEY=validator
+LOG_LEVEL=INFO
 
-VALIDATOR_WALLET=
-VALIDATOR_HOTKEY=
-VALIDATOR_IP=
-VALIDATOR_PIP_INSTALL_PATH=
+# Parameters required for only for the validator
+VLLM_BASE_URL=
+VLLM_API_KEY=
+TENSOR_PARALLEL_SIZE=4
+VLLM_MODEL_NAME=synapsecai/mixtral-8x7b-instruct-llm-defender-GPTQ-v0.1
 
-MINER_WALLET=
-MINER_HOTKEY=
-MINER_IP=
-MINER_PORT=
-MINER_PIP_INSTALL_PATH=
+# Parameters required for only for the API
+TOP_AXONS_ONLY=TRUE
+AXONS_TO_QUERY=12
 
-MINER2_WALLET=
-MINER2_HOTKEY=
-MINER2_IP=
-MINER2_PORT=
-
-DOCKER_NETWORK_GATEWAY=
-DOCKER_NETWORK_SUBNET=
-
-# Wandb
+# Parameters required for integrating with wandb
 WANDB_ENABLE=0
 WANDB_KEY=
 WANDB_PROJECT=
