--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,94 @@
-version: '3'
 services:
-  validator1:
-    image: llm-defender-subnet
-    build:
-      context: .
-      dockerfile: Dockerfile   
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && ls -la /var/run/llm-defender-subnet/ && ls -la /var/run/llm-defender-subnet/llm_defender && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level DEBUG"
+  common-validator: &common-validator
+    image: ghcr.io/synapsec-ai/llm-defender-validator:v0.9.0-beta
+    restart: unless-stopped
+    pull_policy: always
+    user: llm-defender-user
+    ports:
+      - "6000:6000"
     volumes:
-      - .bittensor:/tmp/.bittensor
-  
-  # validator2:
-  #   image: llm-defender-subnet
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile   
-  #   command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR2_WALLET} --wallet.hotkey ${VALIDATOR2_HOTKEY} --log_level DEBUG"
-  #   volumes:
-  #     - .:/var/run/llm-defender-subnet
-  #   networks:
-  #     llm-defender-subnet-network-development:
-  #       ipv4_address: ${VALIDATOR2_IP}
+      - llm-defender-subnet:/home/llm-defender-user/.llm-defender-subnet
+      - ${HOME}/.bittensor:/home/llm-defender-user/.bittensor
+  llm-defender-api: &llm-defender-api
+    restart: unless-stopped
+    pull_policy: always
+    image: ghcr.io/synapsec-ai/llm-defender-api:v0.9.0-beta
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/subnet_api/main.py"
+    ports:
+      - "8080:8080"
+    volumes:
+      - ${HOME}/.bittensor:/home/llm-defender-user/.bittensor
+    environment:
+      - NETUID=${NETUID}
+      - SUBTENSOR_CHAIN_ENDPOINT=${SUBTENSOR_CHAIN_ENDPOINT}
+      - WALLET_NAME=${VALIDATOR_WALLET}
+      - WALLET_HOTKEY=${VALIDATOR_HOTKEY}
+      - API_LOG_LEVEL=${LOG_LEVEL}
+      - TOP_AXONS_ONLY=${TOP_AXONS_ONLY}
+      - AXONS_TO_QUERY=${AXONS_TO_QUERY}
 
-  miner1:
-    image: llm-defender-subnet
+  llm-defender-validator-debug-mode:
+    <<: *common-validator
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL} --debug_mode"
+  
+  llm-defender-validator-remote-vllm:
+    <<: *common-validator
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL} --vllm_base_url ${VLLM_BASE_URL} --vllm_api_key ${VLLM_API_KEY}"
+
+  llm-defender-validator:
+    <<: *common-validator
+    depends_on: 
+      - prompt-generation-api
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL}"
+  
+  llm-defender-validator-debug-mode-dev:
+    <<: *common-validator
     build:
       context: .
-      dockerfile: Dockerfile
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${MINER_PIP_INSTALL_PATH} && pip uninstall -y uvloop && python3 /var/run/llm-defender-subnet/llm_defender/neurons/miner.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${MINER_WALLET} --wallet.hotkey ${MINER_HOTKEY} --axon.port ${MINER_PORT} --validator_min_stake 0 --axon.external_ip ${MINER_IP} --log_level DEBUG"
-    volumes:
-      - .bittensor:/tmp/.bittensor
-  miner2:
-    image: llm-defender-subnet
+      dockerfile: validator.Dockerfile
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL} --debug_mode"
+  
+  llm-defender-validator-remote-vllm-dev:
+    <<: *common-validator
     build:
       context: .
-      dockerfile: Dockerfile
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${MINER_PIP_INSTALL_PATH} && pip uninstall -y uvloop && python3 /var/run/llm-defender-subnet/llm_defender/neurons/miner.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${MINER2_WALLET} --wallet.hotkey ${MINER2_HOTKEY} --axon.port ${MINER2_PORT} --validator_min_stake 0 --axon.external_ip ${MINER2_IP} --log_level DEBUG"
-    volumes:
-      - .bittensor:/tmp/.bittensor
-  llm-defender-api-latest:
+      dockerfile: validator.Dockerfile
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL} --vllm_base_url ${VLLM_BASE_URL} --vllm_api_key ${VLLM_API_KEY} --vllm_model_name ${VLLM_MODEL_NAME}"
+
+  llm-defender-validator-dev:
+    <<: *common-validator
+    build:
+      context: .
+      dockerfile: validator.Dockerfile
+    depends_on: 
+      - prompt-generation-api
+    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL}"
+  
+  prompt-generation-api:
     restart: unless-stopped
-    pull_policy: always
-    user: "${UID}:${GID}"
-    image: ghcr.io/synapsec-ai/llm-defender-api:latest
-    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/subnet_api/main.py"
+    image: vllm/vllm-openai:v0.5.0
     ports:
-      - "8080:8080"
+      - "8000:8000"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    ipc: host
+    command: [
+      "--model", "${VLLM_MODEL_NAME}",
+      "--tensor-parallel-size", "${TENSOR_PARALLEL_SIZE}"
+    ]
     volumes:
-      - ${HOME}/.bittensor:/.bittensor
-    env_file:
-      - .api-env
-  llm-defender-api:
-    restart: unless-stopped
-    pull_policy: always
-    user: "${UID}:${GID}"
-    image: ghcr.io/synapsec-ai/llm-defender-api:v0.8.2
-    command: /bin/bash -c "source /llm-defender-subnet/.venv/bin/activate && python3 /llm-defender-subnet/llm_defender/subnet_api/main.py"
-    ports:
-      - "8080:8080"
-    volumes:
-      - ${HOME}/.bittensor:/.bittensor
-    env_file:
-      - .api-env
+      - ${HOME}/.cache/huggingface:/root/.cache/huggingface
+
+  llm-defender-api-dev:
+    <<: *llm-defender-api
+    build:
+      context: .
+      dockerfile: api.Dockerfile
+
+volumes:
+  llm-defender-subnet:
