--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "llm_defender"
-version = "0.9.1"
+version = "0.9.2"
 description = "This project implements the llm-defender subnet for Bittensor"
 authors = [
     { name = "synapsec.ai", email = "contact@synapsec.ai" }
@@ -38,7 +38,7 @@ homepage = "https://github.com/synapsec-ai/llm-defender-subnet"
 [project.optional-dependencies]
 wandb = ["wandb==0.17.0"]
 miner = ["transformers==4.41.2", "torch==2.3.0"]
-validator = ["scikit-learn==1.5.0", "numpy==1.26.4", "english-words==2.0.1", "openai==1.34.0", "datasets==2.20.0"]
+validator = ["scikit-learn==1.5.0", "numpy==1.26.4", "english-words==2.0.1", "openai==1.34.0", "datasets==2.20.0", "pysha3==1.0.2", "wonderwords==2.2.0"]
 api = ["fastapi==0.110.1", "uvicorn==0.22.0", "python-multipart==0.0.9"]
 
 [tool.setuptools.packages.find]
